--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <div class="px-20">
                             <button id="start" class="btn btn-success w-full my-5">Start Sim</button>
                             <button disabled="disabled" id="pause" class="btn btn-secondary w-full my-5 d-none">Pause Sim</button>
-                            <button disabled="disabled" id="emergency" class="btn btn-danger w-full my-5">Emergency Mode</button>
+                            <button id="emergency" class="btn btn-danger w-full my-5">Emergency Mode</button>
                         </div>
                     </div>
                 </div>
