--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     </div>
                     <div class="card">
                         <a href="https://github.cornfield.dev">Created By Adam Cornfield</a>
+                        <a href="https://github.com/AdamCornfield/Vertical-Hydroponics-Simulation">Source Code</a>
+                        <a href="https://www.gethalfmoon.com/">Built using the Half Moon framework</a>
                     </div>
                 </div>
             </div>
