--- a/index.html
+++ b/index.html
@@ -59,9 +59,17 @@
                         <div class="line-divider"></div>
                     </div>
                     <div class="card">
-                        <a href="https://github.cornfield.dev">Created By Adam Cornfield</a>
-                        <a href="https://github.com/AdamCornfield/Vertical-Hydroponics-Simulation">Source Code</a>
-                        <a href="https://www.gethalfmoon.com/">Built using the Half Moon framework</a>
+                        <div class="d-flex flex-column">
+                            <div class="">
+                                <a href="https://github.cornfield.dev">Created By Adam Cornfield</a>
+                            </div>
+                            <div class="">
+                                <a href="https://github.com/AdamCornfield/Vertical-Hydroponics-Simulation">Source Code can be found here</a>
+                            </div>
+                            <div class="">
+                                <a href="https://www.gethalfmoon.com/">Built using the Halfmoon framework</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
