--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <link href="./css/Styles.css" rel="stylesheet">
 </head>
 <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-set-preferred-theme-onload="true">
-    <div id="page-wrapper" class="page-wrapper">
-        <div id="page-content">
+    <div id="page-wrapper" class="page-wrapper blur-0 with-transitions " data-sidebar-type="overlayed-sm-and-down"">
+        <div id="page-content" class="content-wrapper">
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                     <div class="card p-5 pb-20">
                         <h4 class="text-center">Controls</h4>
                         <div class="line-divider"></div>
@@ -16,10 +16,34 @@
                             <button id="pause" class="btn btn-secondary w-full my-5 d-none">Pause Sim</button>
                             <button id="play" class="btn btn-success w-full my-5 d-none">Resume Sim</button>
                             <button disabled="disabled" id="emergency" class="btn btn-danger w-full my-5">Emergency Mode</button>
+                            <div class="input-group my-5">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">Sim Rate (x)</span>
+                                </div>
+                                <input id="simRateInput" type="number" value="1" max="1000" class="form-control">
+                                <div class="input-group-append">
+                                    <button id="setSimRateBtn" class="btn btn-primary">Set</button>
+                                </div>
+                            </div>
+                            <button id="startLeak" class="btn btn-primary w-full my-5">(Debug) Start Leak</button>
+                            <button id="stopLeak" class="btn btn-primary w-full my-5 d-none">(Debug) Stop Leak</button>
                         </div>
                     </div>
+                    <div class="card p-5 pb-20 text-center">
+                        <h4 class="text-center">Queued Tasks</h4>
+                        <div class="line-divider-full mb-0"></div>
+                        <table class="table table-no-outer-padding">
+                            <thead>
+                                <th>Task Name</th>
+                                <th>Task Execution Time</th>
+                            </thead>
+                        </table>
+                        <table class="table table-no-outer-padding">
+                            <tbody id="taskListDisplay"></tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="card p-0">
                         <div id="statusColour" class="bg-danger text-light border rounded-top mb-10 border-bottom">
                             <h3 id="operationStatusBar" class="text-center">Current Operational Status: Offline</h3>
@@ -43,10 +67,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                     <div class="card p-5 pb-20 text-center">
                         <h4 class="text-center">Statistics</h4>
                         <div class="line-divider-full mb-0"></div>
+
+                        <p>Global Clock:</p>
+                        <p id="globalClockDisplay"></p>
+
+                        <div class="line-divider"></div>
 
                         <p>Time Since Reserviour Tank Refil:</p>
                         <p id="timeSinceRefilT1"></p>
