--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <meta name="viewport" content="width=device-width">
     <link href="./css/halfmoon.min.css" rel="stylesheet">
     <link href="./css/Styles.css" rel="stylesheet">
+    <link href="./css/all.min.css" rel="stylesheet">
+    <meta name="theme-color" content="#111417">
+    <meta name="msapplication-navbutton-color" content="#111417">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#111417">
+    <title>Vertical Hydroponics Simulation</title>
 </head>
 <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-set-preferred-theme-onload="true">
-    <div id="page-wrapper" class="page-wrapper blur-0 with-transitions " data-sidebar-type="overlayed-sm-and-down"">
+    <div id="page-wrapper" class="page-wrapper blur-0 with-transitions " data-sidebar-type="overlayed-sm-and-down">
         <div id="page-content" class="content-wrapper">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-3">
@@ -46,7 +55,10 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="card p-0">
                         <div id="statusColour" class="bg-danger text-light border rounded-top mb-10 border-bottom">
-                            <h3 id="operationStatusBar" class="text-center">Current Operational Status: Offline</h3>
+                            <div class="d-flex justify-content-center text-center">
+                                <h3><i id="buzzerIcon" class="fas mx-10 fa-volume-up d-none" style="position: absolute"></i></h3>
+                                <h3 id="operationStatusBar" class="text-center">Current Operational Status: Offline</h3>
+                            </div>
                         </div>
                         <div class="py-5 px-15">
                             <h5>Reserviour Tank</h5>
@@ -107,4 +119,5 @@
 
     <script src="./js/App.js"></script>
     <script src="./js/halfmoon.min.js"></script>
+    <script defer src="./js/all.min.js"></script>
 </body>
