--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">Sim Rate (x)</span>
                                 </div>
-                                <input id="simRateInput" type="number" value="1" max="1000" class="form-control">
+                                <input id="simRateInput" type="number" value="1000" min="1" max="1000" class="form-control">
                                 <div class="input-group-append">
                                     <button id="setSimRateBtn" class="btn btn-primary">Set</button>
                                 </div>
